refactor - use new toList() feature of JDK 16 and update the gradle dependencies to current versions